--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css" />
     <title>Work Day Scheduler</title>
   </head>
@@ -30,9 +31,55 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+      <div class="input-group mb-3 timeblock">
+        <span class="input-group-text span" id="9">9AM</span>
+        <input type="text" class="form-control hour" placeholder="Plan your schedule!" id="inputPlan">
+        <button class="btn btn-outline-secondary saveBtn" type="button"><img src="./images/saveBtn.png" alt="savebutton" width="20" height="20" class="img-fluid"></button>
+      </div>
+      <div class="input-group mb-3 timeblock">
+        <span class="input-group-text span" id="10">10AM</span>
+        <input type="text" class="form-control hour" placeholder="Plan your schedule!" id="inputPlan">
+        <button class="btn btn-outline-secondary saveBtn" type="button"><img src="./images/saveBtn.png" alt="savebutton" width="20" height="20" class="img-fluid"></button>
+      </div>
+      <div class="input-group mb-3 timeblock">
+        <span class="input-group-text span" id="11">11AM</span>
+        <input type="text" class="form-control hour" placeholder="Plan your schedule!" id="inputPlan">
+        <button class="btn btn-outline-secondary saveBtn" type="button"><img src="./images/saveBtn.png" alt="savebutton" width="20" height="20" class="img-fluid"></button>
+      </div>
+      <div class="input-group mb-3 timeblock">
+        <span class="input-group-text span" id="12">12PM</span>
+        <input type="text" class="form-control hour" placeholder="Plan your schedule!" id="inputPlan">
+        <button class="btn btn-outline-secondary saveBtn" type="button"><img src="./images/saveBtn.png" alt="savebutton" width="20" height="20" class="img-fluid"></button>
+      </div>
+      <div class="input-group mb-3 timeblock">
+        <span class="input-group-text span" id="1">1PM</span>
+        <input type="text" class="form-control hour" placeholder="Plan your schedule!" id="inputPlan">
+        <button class="btn btn-outline-secondary saveBtn" type="button"><img src="./images/saveBtn.png" alt="savebutton" width="20" height="20" class="img-fluid"></button>
+      </div>
+      <div class="input-group mb-3 timeblock">
+        <span class="input-group-text span" id="2">2PM</span>
+        <input type="text" class="form-control hour" placeholder="Plan your schedule!" id="inputPlan">
+        <button class="btn btn-outline-secondary saveBtn" type="button"><img src="./images/saveBtn.png" alt="savebutton" width="20" height="20" class="img-fluid"></button>
+      </div>
+      <div class="input-group mb-3 timeblock">
+        <span class="input-group-text span" id="3">3PM</span>
+        <input type="text" class="form-control hour" placeholder="Plan your schedule!" id="inputPlan">
+        <button class="btn btn-outline-secondary saveBtn" type="button"><img src="./images/saveBtn.png" alt="savebutton" width="20" height="20" class="img-fluid"></button>
+      </div>
+      <div class="input-group mb-3 timeblock">
+        <span class="input-group-text span" id="4">4PM</span>
+        <input type="text" class="form-control hour" placeholder="Plan your schedule!" id="inputPlan">
+        <button class="btn btn-outline-secondary saveBtn" type="button"><img src="./images/saveBtn.png" alt="savebutton" width="20" height="20" class="img-fluid"></button>
+      </div>
+      <div class="input-group mb-3 timeblock">
+        <span class="input-group-text span" id="5">5PM</span>
+        <input type="text" class="form-control hour" placeholder="Plan your schedule!" id="inputPlan">
+        <button class="btn btn-outline-secondary saveBtn" type="button"><img src="./images/saveBtn.png" alt="savebutton" width="20" height="20" class="img-fluid"></button>
+      </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
