--- a/index.html
+++ b/index.html
@@ -34,47 +34,47 @@
       <div class="input-group mb-3 timeblock">
         <span class="input-group-text span" id="9">9AM</span>
         <input type="text" class="form-control hour" placeholder="Plan your schedule!" id="inputPlan">
-        <button class="btn btn-outline-secondary saveBtn0" type="button"><img src="./images/saveBtn.png" alt="savebutton" width="20" height="20" class="img-fluid"></button>
+        <button class="btn btn-outline-secondary saveBtn" type="button"><img src="./images/saveBtn.png" alt="savebutton" width="20" height="20" class="img-fluid"></button>
       </div>
       <div class="input-group mb-3 timeblock">
         <span class="input-group-text span" id="10">10AM</span>
         <input type="text" class="form-control hour" placeholder="Plan your schedule!" id="inputPlan">
-        <button class="btn btn-outline-secondary saveBtn1" type="button"><img src="./images/saveBtn.png" alt="savebutton" width="20" height="20" class="img-fluid"></button>
+        <button class="btn btn-outline-secondary saveBtn" type="button"><img src="./images/saveBtn.png" alt="savebutton" width="20" height="20" class="img-fluid"></button>
       </div>
       <div class="input-group mb-3 timeblock">
         <span class="input-group-text span" id="11">11AM</span>
         <input type="text" class="form-control hour" placeholder="Plan your schedule!" id="inputPlan">
-        <button class="btn btn-outline-secondary saveBtn2" type="button"><img src="./images/saveBtn.png" alt="savebutton" width="20" height="20" class="img-fluid"></button>
+        <button class="btn btn-outline-secondary saveBtn" type="button"><img src="./images/saveBtn.png" alt="savebutton" width="20" height="20" class="img-fluid"></button>
       </div>
       <div class="input-group mb-3 timeblock">
         <span class="input-group-text span" id="12">12PM</span>
         <input type="text" class="form-control hour" placeholder="Plan your schedule!" id="inputPlan">
-        <button class="btn btn-outline-secondary saveBtn3" type="button"><img src="./images/saveBtn.png" alt="savebutton" width="20" height="20" class="img-fluid"></button>
+        <button class="btn btn-outline-secondary saveBtn" type="button"><img src="./images/saveBtn.png" alt="savebutton" width="20" height="20" class="img-fluid"></button>
       </div>
       <div class="input-group mb-3 timeblock">
         <span class="input-group-text span" id="13">1PM</span>
         <input type="text" class="form-control hour" placeholder="Plan your schedule!" id="inputPlan">
-        <button class="btn btn-outline-secondary saveBtn4" type="button"><img src="./images/saveBtn.png" alt="savebutton" width="20" height="20" class="img-fluid"></button>
+        <button class="btn btn-outline-secondary saveBtn" type="button"><img src="./images/saveBtn.png" alt="savebutton" width="20" height="20" class="img-fluid"></button>
       </div>
       <div class="input-group mb-3 timeblock">
         <span class="input-group-text span" id="14">2PM</span>
         <input type="text" class="form-control hour" placeholder="Plan your schedule!" id="inputPlan">
-        <button class="btn btn-outline-secondary saveBtn5" type="button"><img src="./images/saveBtn.png" alt="savebutton" width="20" height="20" class="img-fluid"></button>
+        <button class="btn btn-outline-secondary saveBtn" type="button"><img src="./images/saveBtn.png" alt="savebutton" width="20" height="20" class="img-fluid"></button>
       </div>
       <div class="input-group mb-3 timeblock">
         <span class="input-group-text span" id="15">3PM</span>
         <input type="text" class="form-control hour" placeholder="Plan your schedule!" id="inputPlan">
-        <button class="btn btn-outline-secondary saveBtn6" type="button"><img src="./images/saveBtn.png" alt="savebutton" width="20" height="20" class="img-fluid"></button>
+        <button class="btn btn-outline-secondary saveBtn" type="button"><img src="./images/saveBtn.png" alt="savebutton" width="20" height="20" class="img-fluid"></button>
       </div>
       <div class="input-group mb-3 timeblock">
         <span class="input-group-text span" id="16">4PM</span>
         <input type="text" class="form-control hour" placeholder="Plan your schedule!" id="inputPlan">
-        <button class="btn btn-outline-secondary saveBtn7" type="button"><img src="./images/saveBtn.png" alt="savebutton" width="20" height="20" class="img-fluid"></button>
+        <button class="btn btn-outline-secondary saveBtn" type="button"><img src="./images/saveBtn.png" alt="savebutton" width="20" height="20" class="img-fluid"></button>
       </div>
       <div class="input-group mb-3 timeblock">
         <span class="input-group-text span" id="17">5PM</span>
         <input type="text" class="form-control hour" placeholder="Plan your schedule!" id="inputPlan">
-        <button class="btn btn-outline-secondary saveBtn8" type="button"><img src="./images/saveBtn.png" alt="savebutton" width="20" height="20" class="img-fluid"></button>
+        <button class="btn btn-outline-secondary saveBtn" type="button"><img src="./images/saveBtn.png" alt="savebutton" width="20" height="20" class="img-fluid"></button>
       </div>
     </div>
 
